# busca-maes-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GOALS.md  Makefile  README.md  bot.py  docker-compose.yml  fly.toml  mypy.ini  pyproject.toml  requirements.txt  run.bat  run.ps1  test_scraper.py  tse_scraper.py
.claude/: settings.json
.claude/hooks/: plan-spec-enforcer.js
.github/workflows/: ci.yml  release.yml
docs/: rnp-circuit-breaker.md
src/buscamaes/: __init__.py  __main__.py  logging_utils.py  observability.py  settings.py  validation.py
src/buscamaes/bot/: __init__.py  formatting.py  handlers.py
src/buscamaes/security/: allowlist.py  decorators.py  rate_limit.py
src/buscamaes/sources/: __init__.py
src/buscamaes/sources/rnp/: __init__.py  client.py  models.py  parser.py  pool.py
src/buscamaes/sources/tse/: __init__.py  client.py  models.py  parser.py
src/buscamaes/storage/: __init__.py  audit.py
tests/: conftest.py  test_abuse_detection.py  test_allowlist.py  test_audit.py  test_denylist.py  test_format_vehicle.py  test_handle_plate.py  test_name_parsing.py  test_name_parsing_fallbacks.py  test_observability.py  test_plate_detection.py  test_rate_limit.py  test_rnp_client.py  test_rnp_parser.py  test_session.py  test_tse_parser.py  test_validation.py  test_version.py
