[project]
name = "busca-maes-bot"
version = "0.2.0"
description = "Telegram bot for Costa Rica TSE electoral registry lookups"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot==21.6",
    "httpx==0.27.2",
    "beautifulsoup4==4.12.3",
    "python-dotenv==1.0.1",
    "lxml==5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "mypy>=1.11",
    "ruff>=0.6",
    "freezegun>=1.5",
    "types-beautifulsoup4>=4.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "ASYNC", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"test_scraper.py" = ["E402"]  # legacy manual test; replaced in PR #2

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["live: hits real TSE, opt-in only"]
